# Bgrok

./: .gitignore  airules.md  architect.md  build_failure_log.txt  plan.md  prd (1).md  relay_service_start.bat  relay_service_stop.bat  run_all.py  test_wgc.py
.github/workflows/: build-ios.yml
agent/: crypto_helper.py  input_injector.py  main.py  screen_capture.py  server.py  ssl_server.py
agent-rust/: Cargo.toml
agent-rust/src/: input_injector.rs  main.rs  screen_capture.rs
beacon/: README.md  main.py
client/: index.css  index.html  index.js
ios/: README.md  project.yml
ios/bgrok/: ContentView.swift  VideoPlayerView.swift  WebRTCManager.swift  bgrokApp.swift
relay/: __init__.py  relay.py
spikes/: spike_sendinput.py  spike_wol_check.ps1  webrtc_spike.html
