[package]
name = "agent-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["connect", "handshake", "native-tls"] }
webrtc = { version = "0.10.1" }
windows-capture = { version = "2.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
openh264 = "0.6.0"
futures = "0.3"
native-tls = "0.2"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Threading"
]
